--- a/deploy/crds/aws.managed.openshift.io_v1alpha1_awsfederatedrole_support_readonly_cr.yaml
+++ b/deploy/crds/aws.managed.openshift.io_v1alpha1_awsfederatedrole_support_readonly_cr.yaml
@@ -1,10 +1,11 @@
 apiVersion: aws.managed.openshift.io/v1alpha1
 kind: AWSFederatedRole
 metadata:
-  name: read-only
+  name: support-read-only
   namespace: aws-account-operator
 spec:
-  managed: false
+  managed: true
+  managedRoleName: RH-Support-Limited-Access
   roleDisplayName: Read only
   roleDescription: User may view all AWS resources for this cluster, but not modify, create or delete resources.
   # Custom Policy definition
