--- a/deploy/crds/aws.managed.openshift.io_accountpools_crd.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accountpools_crd.yaml
@@ -4,18 +4,18 @@ metadata:
   name: accountpools.aws.managed.openshift.io
 spec:
   additionalPrinterColumns:
-    - JSONPath: .status.poolSize
-      description: Desired pool size
-      name: Pool Size
-      type: integer
-    - JSONPath: .status.unclaimedAccounts
-      description: Number of unclaimed accounts
-      name: Unclaimed Accounts
-      type: integer
-    - JSONPath: .status.claimedAccounts
-      description: Number of claimed accounts
-      name: Claimed Accounts
-      type: integer
+  - JSONPath: .status.poolSize
+    description: Desired pool size
+    name: Pool Size
+    type: integer
+  - JSONPath: .status.unclaimedAccounts
+    description: Number of unclaimed accounts
+    name: Unclaimed Accounts
+    type: integer
+  - JSONPath: .status.claimedAccounts
+    description: Number of claimed accounts
+    name: Claimed Accounts
+    type: integer
   group: aws.managed.openshift.io
   names:
     kind: AccountPool
@@ -30,10 +30,14 @@ spec:
       description: AccountPool is the Schema for the accountpools API
       properties:
         apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
-          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
@@ -43,7 +47,7 @@ spec:
             poolSize:
               type: integer
           required:
-            - poolSize
+          - poolSize
           type: object
         status:
           description: AccountPoolStatus defines the observed state of AccountPool
@@ -51,17 +55,21 @@ spec:
             claimedAccounts:
               type: integer
             poolSize:
-              description: 'INSERT ADDITIONAL STATUS FIELD - define observed state of cluster Important: Run "operator-sdk generate k8s" to regenerate code after modifying this file Add custom validation using kubebuilder tags: https://book.kubebuilder.io/beyond_basics/generating_crd.html'
+              description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
+                of cluster Important: Run "operator-sdk generate k8s" to regenerate
+                code after modifying this file Add custom validation using kubebuilder
+                tags: https://book.kubebuilder.io/beyond_basics/generating_crd.html'
               type: integer
             unclaimedAccounts:
               type: integer
           required:
-            - claimedAccounts
-            - poolSize
-            - unclaimedAccounts
+          - claimedAccounts
+          - poolSize
+          - unclaimedAccounts
           type: object
+      type: object
   version: v1alpha1
   versions:
-    - name: v1alpha1
-      served: true
-      storage: true
+  - name: v1alpha1
+    served: true
+    storage: true
