--- a/deploy/crds/aws.managed.openshift.io_v1alpha1_awsmanagedrole_support-limited-access_cr.yaml
+++ b/deploy/crds/aws.managed.openshift.io_v1alpha1_awsmanagedrole_support-limited-access_cr.yaml
@@ -1,11 +1,11 @@
 apiVersion: aws.managed.openshift.io/v1alpha1
-kind: AWSFederatedRole
+kind: AWSManagedRole
 metadata:
-  name: read-only
+  name: support-limited-access
   namespace: aws-account-operator
 spec:
-  roleDisplayName: Read only
-  roleDescription: User may view all AWS resources for this cluster, but not modify, create or delete resources.
+  displayName: RH-Support-Limited-Access
+  description: User may view all AWS resources for this cluster, but not modify, create or delete resources.
   # Custom Policy definition
   awsCustomPolicy:
     name:  BillingReadOnlyAccess
