add to template

--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -237,3 +237,4 @@ objects:
     - "AmazonEC2ReadOnlyAccess"
     - "AmazonS3ReadOnlyAccess"
     - "IAMReadOnlyAccess"
+    - "CloudWatchReadOnlyAccess"
