Adds the ability to build sts client

--- a/deploy/crds/aws.managed.openshift.io_accountclaims_crd.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accountclaims_crd.yaml
@@ -97,6 +97,10 @@ spec:
                 - id
                 - name
               type: object
+            manualSTSMode:
+              type: boolean
+            stsRoleARN:
+              type: string
           required:
             - accountLink
             - aws
