--- a/deploy/crds/aws.managed.openshift.io_accounts_crd.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accounts_crd.yaml
@@ -66,6 +66,8 @@ spec:
                 - id
                 - name
               type: object
+            manualSTSMode:
+              type: boolean
           required:
             - awsAccountID
             - iamUserSecret
