--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -20,6 +20,8 @@ parameters:
   required: true
 - name: ACCOUNT_POOL_NAME
   required: true
+- name: STS_JUMP_ROLE
+  required: true
 
 objects:
 - apiVersion: operators.coreos.com/v1alpha1
@@ -59,6 +61,7 @@ objects:
     account-limit: "${ACCOUNT_LIMIT}"
     root: ${ROOT_OU_ID}
     base: ${BASE_OU_ID}
+    sts-jump-role: ${STS_JUMP_ROLE}
 
 - apiVersion: aws.managed.openshift.io/v1alpha1
   kind: AccountPool
