--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -116,6 +116,11 @@ objects:
             - "ec2:RejectVpcPeeringConnection"
             - "ec2:DisableVgwRoutePropagation"
             - "ec2:EnableVgwRoutePropagation"
+            - "ec2:CreateNetworkInterface"
+            - "ec2:DescribeNetworkInterface"
+            - "ec2:ModifyNetworkInterfaceAttribute"
+            - "ec2:DeleteNetworkInterface"
+            - "ec2:CreateNetworkInterfacePermission"
             - "guardduty:GetDetector"
             - "guardduty:GetFindings"
             - "guardduty:GetFindingsStatistics"
@@ -213,7 +218,6 @@ objects:
             - "arn:aws:ec2:*:*:vpn-gateway/*"
     awsManagedPolicies:
       - "AmazonEC2ReadOnlyAccess"
-      - "AWSServiceRoleForVPCTransitGateway"
 
 - apiVersion: aws.managed.openshift.io/v1alpha1
   kind: AWSFederatedRole
