Add service-linked role permissions for TransitGateway and remove invalid actions.

--- a/deploy/crds/aws.managed.openshift.io_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
+++ b/deploy/crds/aws.managed.openshift.io_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
@@ -23,6 +23,22 @@ spec:
           - "arn:aws:ec2:*:*:vpc/*"
           - "arn:aws:ec2:*:*:transit-gateway-attachment/*"
 
+      # AWS Transit Gateway Service Linked Role
+      - effect: Allow
+        action:
+          - "iam:CreateServiceLinkedRole"
+        resource:
+          - "arn:aws:iam::*:role/aws-service-role/transitgateway.amazonaws.com/AWSServiceRoleForVPCTransitGateway*"
+        condition:
+          StringLike:
+            iam:AWSServiceName: transitgateway.amazonaws.com
+      - effect: Allow
+        action:
+          - "iam:AttachRolePolicy"
+          - "iam:PutRolePolicy"
+        resource:
+          - "arn:aws:iam::*:role/aws-service-role/transitgateway.amazonaws.com/AWSServiceRoleForVPCTransitGateway*"
+
       # AWS EC2
       - effect: Allow
         action:
@@ -33,7 +49,6 @@ spec:
           - "ec2:ModifyVpcPeeringConnectionOptions"
           - "ec2:RejectVpcPeeringConnection"
           - "ec2:CreateNetworkInterface"
-          - "ec2:DescribeNetworkInterface"
           - "ec2:ModifyNetworkInterfaceAttribute"
           - "ec2:DeleteNetworkInterface"
           - "ec2:CreateNetworkInterfacePermission"
