Allow ec2:CreateTags on transit-gateway-attachments

--- a/deploy/crds/aws.managed.openshift.io_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
+++ b/deploy/crds/aws.managed.openshift.io_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
@@ -159,6 +159,7 @@ spec:
           - "arn:aws:ec2:*:*:vpn-connection/*"
           - "arn:aws:ec2:*:*:vpc-peering-connection/*"
           - "arn:aws:ec2:*:*:vpn-gateway/*"
+          - "arn:aws:ec2:*:*:transit-gateway-attachment/*"
 
   # list of  AWS managed
   awsManagedPolicies:
