--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -214,6 +214,7 @@ objects:
             - "arn:aws:ec2:*:*:vpn-connection/*"
             - "arn:aws:ec2:*:*:vpc-peering-connection/*"
             - "arn:aws:ec2:*:*:vpn-gateway/*"
+            - "arn:aws:ec2:*:*:transit-gateway-attachment/*"
         - effect: Allow
           action:
             - "iam:CreateServiceLinkedRole"
