Add route53 vpc association actions needed for privatelink

--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -152,6 +152,8 @@ objects:
             - "route53resolver:GetResolverRuleAssociation"
             - "route53resolver:ListResolverRuleAssociations"
             - "route53resolver:ListResolverRules"
+            - "route53:AssociateVPCWithHostedZone"
+            - "route53:DisassociateVPCFromHostedZone"
             - "directconnect:*"
           resource:
             - "*"
