--- a/deploy/crds/aws.managed.openshift.io_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
+++ b/deploy/crds/aws.managed.openshift.io_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
@@ -52,6 +52,7 @@ spec:
           - "ec2:ModifyNetworkInterfaceAttribute"
           - "ec2:DeleteNetworkInterface"
           - "ec2:CreateNetworkInterfacePermission"
+          - "ec2:DescribeVpcs"
         resource:
           - "*"
 
@@ -82,6 +83,8 @@ spec:
           - "route53resolver:GetResolverRuleAssociation"
           - "route53resolver:ListResolverRuleAssociations"
           - "route53resolver:ListResolverRules"
+          - "route53:AssociateVPCWithHostedZone"
+          - "route53:DisassociateVPCFromHostedZone"
         resource:
           - "*"
       - effect: Allow
