Adds necessary field for Support ARN
Adds necessary field to AccountClaim CR to enable Support ARN entry for
STS clusters

--- a/deploy/crds/aws.managed.openshift.io_accountclaims_crd.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accountclaims_crd.yaml
@@ -101,6 +101,8 @@ spec:
               type: boolean
             stsRoleARN:
               type: string
+            supportRoleARN:
+              type: string
           required:
             - accountLink
             - aws
