accountclaims: Accept ExternalID when calling AssumeRole

--- a/deploy/crds/aws.managed.openshift.io_accountclaims_crd.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accountclaims_crd.yaml
@@ -101,6 +101,8 @@ spec:
               type: object
             manualSTSMode:
               type: boolean
+            stsExternalID:
+              type: string
             stsRoleARN:
               type: string
             supportRoleARN:
