--- a/deploy/crds/aws.managed.openshift.io_accountclaims_crd.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accountclaims_crd.yaml
@@ -89,7 +89,7 @@ spec:
             customTags:
               type: string
             legalEntity:
-              description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster Important: Run "operator-sdk generate k8s" to regenerate code after modifying this file Add custom validation using kubebuilder tags: https://book.kubebuilder.io/beyond_basics/generating_crd.html'
+              description: LegalEntity contains Red Hat specific identifiers to the original creator the clusters
               properties:
                 id:
                   type: string
