utils Status Refactor

--- a/deploy/crds/aws.managed.openshift.io_accounts.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accounts.yaml
@@ -123,6 +123,8 @@ spec:
               rotateCredentials:
                 type: boolean
               state:
+                description: AccountStateStatus defines the various status an Account
+                  CR can have
                 type: string
               supportCaseID:
                 type: string
