--- a/deploy/crds/aws.managed.openshift.io_accountpools.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accountpools.yaml
@@ -1,4 +1,6 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+
+---
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
@@ -6,19 +8,6 @@ metadata:
   creationTimestamp: null
   name: accountpools.aws.managed.openshift.io
 spec:
-  additionalPrinterColumns:
-    - JSONPath: .status.poolSize
-      description: Desired pool size
-      name: Pool Size
-      type: integer
-    - JSONPath: .status.unclaimedAccounts
-      description: Number of unclaimed accounts
-      name: Unclaimed Accounts
-      type: integer
-    - JSONPath: .status.claimedAccounts
-      description: Number of claimed accounts
-      name: Claimed Accounts
-      type: integer
   group: aws.managed.openshift.io
   names:
     kind: AccountPool
@@ -26,47 +15,64 @@ spec:
     plural: accountpools
     singular: accountpool
   scope: Namespaced
-  subresources:
-    status: {}
-  validation:
-    openAPIV3Schema:
-      description: AccountPool is the Schema for the accountpools API
-      properties:
-        apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-          type: string
-        kind:
-          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
-        metadata:
-          type: object
-        spec:
-          description: AccountPoolSpec defines the desired state of AccountPool
-          properties:
-            poolSize:
-              type: integer
-          required:
+  versions:
+  - additionalPrinterColumns:
+    - description: Desired pool size
+      jsonPath: .status.poolSize
+      name: Pool Size
+      type: integer
+    - description: Number of unclaimed accounts
+      jsonPath: .status.unclaimedAccounts
+      name: Unclaimed Accounts
+      type: integer
+    - description: Number of claimed accounts
+      jsonPath: .status.claimedAccounts
+      name: Claimed Accounts
+      type: integer
+    name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        description: AccountPool is the Schema for the accountpools API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: AccountPoolSpec defines the desired state of AccountPool
+            properties:
+              poolSize:
+                type: integer
+            required:
             - poolSize
-          type: object
-        status:
-          description: AccountPoolStatus defines the observed state of AccountPool
-          properties:
-            claimedAccounts:
-              type: integer
-            poolSize:
-              type: integer
-            unclaimedAccounts:
-              type: integer
-          required:
+            type: object
+          status:
+            description: AccountPoolStatus defines the observed state of AccountPool
+            properties:
+              claimedAccounts:
+                type: integer
+              poolSize:
+                type: integer
+              unclaimedAccounts:
+                type: integer
+            required:
             - claimedAccounts
             - poolSize
             - unclaimedAccounts
-          type: object
-  version: v1alpha1
-  versions:
-    - name: v1alpha1
-      served: true
-      storage: true
+            type: object
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
 status:
   acceptedNames:
     kind: ""
