Add AssociateVPCWithHostedZone to network-mgmt

--- a/test/deploy/aws.managed.openshift.io_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
+++ b/test/deploy/aws.managed.openshift.io_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
@@ -94,6 +94,7 @@ spec:
           - "route53:ListHostedZones"
           - "route53:CreateVPCAssociationAuthorization"
           - "route53:DeleteVPCAssociationAuthorization"
+          - "route53:AssociateVPCWithHostedZone"
         resource:
           - "*"          
       - effect: Allow
