allow network-mgmt to dowload the VPN configs

--- a/test/deploy/aws.managed.openshift.io_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
+++ b/test/deploy/aws.managed.openshift.io_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
@@ -123,6 +123,8 @@ spec:
           - "ec2:DeleteVpnConnection"
           - "ec2:EnableVgwRoutePropagation"
           - "ec2:DisableVgwRoutePropagation"
+          - "ec2:GetVpnConnectionDeviceTypes"
+          - "ec2:GetVpnConnectionDeviceSampleConfiguration"
         resource:
           - "*"
 
