--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -149,6 +149,8 @@ objects:
             - "ec2:ModifyVpcPeeringConnectionOptions"
             - "ec2:RejectVpcPeeringConnection"
             - "ec2:DisableVgwRoutePropagation"
+            - "ec2:GetVpnConnectionDeviceTypes"
+            - "ec2:GetVpnConnectionDeviceSampleConfiguration"
             - "ec2:EnableVgwRoutePropagation"
             - "ec2:CreateNetworkInterface"
             - "ec2:ModifyNetworkInterfaceAttribute"
@@ -221,6 +223,8 @@ objects:
             - "ec2:DeleteVpnConnection"
             - "ec2:EnableVgwRoutePropagation"
             - "ec2:DisableVgwRoutePropagation"
+            - "ec2:GetVpnConnectionDeviceTypes"
+            - "ec2:GetVpnConnectionDeviceSampleConfiguration"
           resource:
             - "*"
         - effect: Allow
