allow network-mgmt to dowload the VPN configs (#645)
* allow network-mgmt to dowload the VPN configs

* dedup

--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -221,6 +221,8 @@ objects:
             - "ec2:DeleteVpnConnection"
             - "ec2:EnableVgwRoutePropagation"
             - "ec2:DisableVgwRoutePropagation"
+            - "ec2:GetVpnConnectionDeviceTypes"
+            - "ec2:GetVpnConnectionDeviceSampleConfiguration"
           resource:
             - "*"
         - effect: Allow
