--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -28,7 +28,7 @@ parameters:
   required: true
 - name: AWS_MANAGED_TAGS
   required: false
-- name: GOVCLOUD
+- name: FEDRAMP
   required: false
 
 objects:
@@ -73,7 +73,7 @@ objects:
     support-jump-role: ${SUPPORT_JUMP_ROLE}
     shard-name: ${SHARD_NAME}
     aws-managed-tags: "${AWS_MANAGED_TAGS}"
-    govcloud: "${GOVCLOUD}"
+    fedramp: "${FEDRAMP}"
     regions: |
       us-east-1:ami-000db10762d0c4c05:t2.micro
       us-east-2:ami-094720ddca649952f:t2.micro
