Add namespace to test accountpool CR

--- a/hack/files/aws.managed.openshift.io_v1alpha1_zero_size_accountpool.yaml
+++ b/hack/files/aws.managed.openshift.io_v1alpha1_zero_size_accountpool.yaml
@@ -2,5 +2,6 @@ apiVersion: aws.managed.openshift.io/v1alpha1
 kind: AccountPool
 metadata:
   name: zero-size-accountpool
+  namespace: aws-account-operator
 spec:
   poolSize: 0
