Handle region initialization on fedramp env

--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -98,6 +98,8 @@ objects:
       sa-east-1:ami-05c1c16cac05a7c0b:t2.micro
       af-south-1:ami-0f4b49fefef9be45a:t3.micro
       me-south-1:ami-0b41a37a62a4296fc:t3.micro
+      us-gov-west-1:ami-2c74214d:t2.micro
+      us-gov-east-1:ami-9e10f0ef:t2.micro
 
 - apiVersion: aws.managed.openshift.io/v1alpha1
   kind: AccountPool
