VPCEndpointServices permissions for Hypershift private hosted clusters
As part of APPSRE-4240 and within the context of SDE-1601, AppSRE wants to prepare the hypershift operator to be able to provision private hypershift clusters. Therefore, the hypershift operator requires permissions to manage VPCEndpointServices within the RH AWS account of a Hypershift management cluster it is running on.

```
"ec2:CreateVpcEndpointServiceConfiguration"
"ec2:DescribeVpcEndpointServiceConfigurations"
"ec2:DeleteVpcEndpointServiceConfigurations"
"elasticloadbalancing:DescribeLoadBalancers"
```

More details can be found here https://hypershift-docs.netlify.app/how-to/deploy-aws-private-clusters/ and here https://github.com/openshift/hypershift/blob/main/hypershift-operator/controllers/platform/aws/controller.go

The AWSFederatedRole network-mgmt does not include those permissions right now. I suggest we add the required permissions to that role if there aren't any concerns because of the shared nature of that role.

Part of https://issues.redhat.com/browse/OSD-9926

Signed-off-by: Gerd Oberlechner <goberlec@redhat.com>

--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -131,10 +131,12 @@ objects:
             - "ec2:CreateVpnConnection"
             - "ec2:CreateVpnConnectionRoute"
             - "ec2:CreateVpnGateway"
+            - "ec2:CreateVpcEndpointServiceConfiguration"
             - "ec2:DeleteVpcPeeringConnection"
             - "ec2:DeleteVpnConnection"
             - "ec2:DeleteVpnConnectionRoute"
             - "ec2:DeleteVpnGateway"
+            - "ec2:DeleteVpcEndpointServiceConfigurations"
             - "ec2:DescribeAvailabilityZones"
             - "ec2:DescribeRouteTables"
             - "ec2:DescribeSubnets"
@@ -146,6 +148,7 @@ objects:
             - "ec2:DescribeVpcs"
             - "ec2:DescribeVpnConnections"
             - "ec2:DescribeVpnGateways"
+            - "ec2:DescribeVpcEndpointServiceConfigurations"
             - "ec2:CreateVpnConnection"
             - "ec2:CreateTags"
             - "ec2:CreateRoute"
@@ -159,6 +162,7 @@ objects:
             - "ec2:ModifyNetworkInterfaceAttribute"
             - "ec2:DeleteNetworkInterface"
             - "ec2:CreateNetworkInterfacePermission"
+            - "elasticloadbalancing:DescribeLoadBalancers"
             - "guardduty:GetDetector"
             - "guardduty:GetFindings"
             - "guardduty:GetFindingsStatistics"
