[OSD-17712] add listType=map for AccountStatus.Conditions to address: API rule violation: list_type_missing,github.com/openshift/aws-account-operator/api/v1alpha1,AccountStatus,Conditions

--- a/deploy/crds/aws.managed.openshift.io_accounts.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accounts.yaml
@@ -131,6 +131,7 @@ spec:
                       type: string
                   type: object
                 type: array
+                x-kubernetes-list-type: map
               regionalServiceQuotas:
                 additionalProperties:
                   additionalProperties:
