[OSD-19300] Updated error handling

--- a/deploy/crds/aws.managed.openshift.io_accountclaims.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accountclaims.yaml
@@ -102,7 +102,7 @@ spec:
               customTags:
                 type: string
               fleetManagerConfig:
-                description: FleetManagerConfig contains configuration specfic to
+                description: FleetManagerConfig contains configuration specific to
                   account claims
                 properties:
                   trustedARN:
