[OSD-21095] Implements region enablement for supported opt-in regions for new non-ccs accounts

--- a/deploy/crds/aws.managed.openshift.io_accounts.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accounts.yaml
@@ -130,6 +130,18 @@ spec:
                       type: string
                   type: object
                 type: array
+              optInRegions:
+                additionalProperties:
+                  properties:
+                    regionCode:
+                      type: string
+                    status:
+                      type: string
+                  required:
+                  - status
+                  - regionCode
+                  type: object
+                type: object
               regionalServiceQuotas:
                 additionalProperties:
                   additionalProperties:
